updated coordinate function

--- a/PDEW_eda.ipynb
+++ b/PDEW_eda.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "4b25c9b3-6211-4387-9cea-8ce13bb134c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from geopy.geocoders import Nominatim\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
+    "import time\n",
     "from sklearn import linear_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8d06b963-43ef-4957-ac3b-092c0a79fd76",
    "metadata": {},
    "outputs": [
@@ -27,7 +30,7 @@
        "'C:\\\\Users\\\\olubl\\\\OneDrive\\\\14th grade\\\\PDEW_Predict'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6c513f50-0767-4c6b-afb1-46a30da56810",
    "metadata": {},
    "outputs": [],
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f66468e5-6f29-4c52-b14e-6604b3e113c4",
    "metadata": {},
    "outputs": [
@@ -161,7 +164,7 @@
        "4                    Nashville, TN      685          46  130.88         G4  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ec8303dc-2566-4093-a835-814b9701f558",
    "metadata": {},
    "outputs": [
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "20a14f93-be83-4eac-9c34-1ce829027583",
    "metadata": {},
    "outputs": [
@@ -222,7 +225,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "121f7a66-cee0-4463-9674-5e444ad57f81",
    "metadata": {},
    "outputs": [
@@ -250,7 +253,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c20edd3a-3a1d-426c-938e-65e9ed9385f8",
    "metadata": {},
    "outputs": [],
@@ -286,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b962d466-42d1-4780-ab41-078a86235340",
    "metadata": {},
    "outputs": [],
@@ -297,7 +300,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "id": "067b77cb-7fa3-4b7a-baa9-f3a2e53fc39c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.7544657\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now using geopy, we can get the physical coordinates of each citymarket. we can use this later to plot routes or citymarkets on a map.\n",
+    "geolocator = Nominatim(user_agent = 'citymarket_locator')\n",
+    "#nominatim is an open-source geocoding service provided by OpenStreetMap\n",
+    "location = geolocator.geocode('Atlanta, GA')\n",
+    "print(location.latitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3b8ec198-72b1-4d2f-9fd8-ab1dbd78a91e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coords(city):\n",
+    "    try:\n",
+    "        coords = geolocator.geocode(city)\n",
+    "        if loc:         #check if loc exists\n",
+    "            return (coords.latitude, coords.longitude)\n",
+    "        else:\n",
+    "            return (None, None)\n",
+    "    except:\n",
+    "        return (None, None)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd78fa9-6d09-42ff-94cb-ab37471ed142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now we apply this function to the dataframe. Nominatim has a limit of 1 query per second, so we must add a delay.\n",
+    "coords1 = all_pdew['city1'].apply(get_coords)\n",
+    "time.sleep(1)\n",
+    "coords2 = all_pdew['city2'].apply(get_coords)\n",
+    "time.sleep(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "38db08e3-9644-41f2-b514-e1b08788c4af",
    "metadata": {},
    "outputs": [
@@ -343,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c1494d30-2b78-4acd-acf1-3c6bee9e69f6",
    "metadata": {},
    "outputs": [
@@ -353,7 +411,7 @@
        "Text(0, 0.5, 'Fare ($)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d2d293d2-80a2-403a-ae99-e6f55d906cdc",
    "metadata": {
     "scrolled": true
@@ -501,7 +559,7 @@
        "12         XP  113.983335"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e4365435-f85e-4c69-8bd9-de5c65ec7e34",
    "metadata": {},
    "outputs": [
@@ -532,7 +590,7 @@
        "Text(0.5, 1.0, 'Average Fare in Dominant Markets by Carrier')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -558,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f45073d0-1af3-4ba8-8097-5f6adf491f49",
    "metadata": {},
    "outputs": [
@@ -568,7 +626,7 @@
        "204"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "f86b95cd-4ee4-44f5-9bd4-84d7caf76c29",
    "metadata": {},
    "outputs": [
@@ -611,6 +669,7 @@
        "      <th>city</th>\n",
        "      <th>passengers</th>\n",
        "      <th>fare</th>\n",
+       "      <th>carrier_lg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -619,33 +678,39 @@
        "      <td>Allentown, PA</td>\n",
        "      <td>18</td>\n",
        "      <td>367.69</td>\n",
+       "      <td>AA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Allentown, PA</td>\n",
        "      <td>89</td>\n",
        "      <td>138.60</td>\n",
+       "      <td>G4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Allentown, PA</td>\n",
        "      <td>107</td>\n",
        "      <td>319.69</td>\n",
+       "      <td>DL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Allentown, PA</td>\n",
        "      <td>13</td>\n",
        "      <td>256.48</td>\n",
+       "      <td>AA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Allentown, PA</td>\n",
        "      <td>46</td>\n",
        "      <td>130.88</td>\n",
+       "      <td>G4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -655,54 +720,59 @@
        "      <td>Tulsa, OK</td>\n",
        "      <td>22</td>\n",
        "      <td>260.26</td>\n",
+       "      <td>AA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13218</th>\n",
        "      <td>Sanford, FL</td>\n",
        "      <td>139</td>\n",
        "      <td>82.52</td>\n",
+       "      <td>G4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13219</th>\n",
        "      <td>Springfield, MO</td>\n",
        "      <td>15</td>\n",
        "      <td>301.39</td>\n",
+       "      <td>AA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13220</th>\n",
        "      <td>Sarasota, FL</td>\n",
        "      <td>13</td>\n",
        "      <td>396.13</td>\n",
+       "      <td>DL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13221</th>\n",
        "      <td>Syracuse, NY</td>\n",
        "      <td>28</td>\n",
        "      <td>255.31</td>\n",
+       "      <td>AA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13222 rows × 3 columns</p>\n",
+       "<p>13222 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  city  passengers    fare\n",
-       "0        Allentown, PA          18  367.69\n",
-       "1        Allentown, PA          89  138.60\n",
-       "2        Allentown, PA         107  319.69\n",
-       "3        Allentown, PA          13  256.48\n",
-       "4        Allentown, PA          46  130.88\n",
-       "...                ...         ...     ...\n",
-       "13217        Tulsa, OK          22  260.26\n",
-       "13218      Sanford, FL         139   82.52\n",
-       "13219  Springfield, MO          15  301.39\n",
-       "13220     Sarasota, FL          13  396.13\n",
-       "13221     Syracuse, NY          28  255.31\n",
+       "                  city  passengers    fare carrier_lg\n",
+       "0        Allentown, PA          18  367.69         AA\n",
+       "1        Allentown, PA          89  138.60         G4\n",
+       "2        Allentown, PA         107  319.69         DL\n",
+       "3        Allentown, PA          13  256.48         AA\n",
+       "4        Allentown, PA          46  130.88         G4\n",
+       "...                ...         ...     ...        ...\n",
+       "13217        Tulsa, OK          22  260.26         AA\n",
+       "13218      Sanford, FL         139   82.52         G4\n",
+       "13219  Springfield, MO          15  301.39         AA\n",
+       "13220     Sarasota, FL          13  396.13         DL\n",
+       "13221     Syracuse, NY          28  255.31         AA\n",
        "\n",
-       "[13222 rows x 3 columns]"
+       "[13222 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,8 +781,8 @@
     "#thus, some cities are present in both columns, so we need to filter for both.\n",
     "#to do this, we need to produce a dataframe that includes all individual cities in one column. This will contain twice as many rows.\n",
     "\n",
-    "df1 = all_pdew[['city1','passengers','fare']].rename(columns={'city1':'city'})\n",
-    "df2 = all_pdew[['city2','passengers','fare']].rename(columns={'city2':'city'})\n",
+    "df1 = all_pdew[['city1','passengers','fare','carrier_lg']].rename(columns={'city1':'city'})\n",
+    "df2 = all_pdew[['city2','passengers','fare','carrier_lg']].rename(columns={'city2':'city'})\n",
     "\n",
     "df_merged = pd.concat([df1,df2],ignore_index=True)\n",
     "df_merged"
@@ -720,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "781c75b9-19eb-4e4e-a3f6-040191f27a52",
    "metadata": {},
    "outputs": [
@@ -788,7 +858,7 @@
        "122   Jackson, WY  434.503475"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,30 +877,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2d02e0ba-a245-435b-b05f-84723a3d4fbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unsurprisingly, the top 5 most expensive markets to fly in/out of are ski towns."
+    "#unsurprisingly, the top 5 most expensive markets to fly in/out of are ski towns.\n",
+    "#map showing 20 most/least expensive markets?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e52d3ec7-63da-4d41-bb64-8a49422d0690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using the same df_merged dataframe, we can produce a dataframe showing the percent of routes each carrier has the largest market share on out of each of the 274 markets in the dataframe\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e52d3ec7-63da-4d41-bb64-8a49422d0690",
+   "id": "2e4c568a-abf9-43b4-a1de-010bc3f81b73",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#look at pct of destinations dominated by a given airline from a given citymarket."
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python [conda env:spatialdata]",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "conda-env-spatialdata-py"
   },
   "language_info": {
    "codemirror_mode": {
