working on point buffers for population

--- a/PDEW_model.ipynb
+++ b/PDEW_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "10255383-3625-4a58-939d-b00a0510f1f9",
    "metadata": {},
    "outputs": [],
@@ -13,20 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "df1b6320-c9a4-4421-95e3-faf290e12547",
    "metadata": {},
    "outputs": [],
    "source": [
     "#pull our pdew data and the geospatial dataframe pulled from the PDEW_eda script with city locations\n",
-    "all_pdew = pd.read_csv('C:\\\\Users\\\\olubl\\\\OneDrive\\\\14th grade\\\\PDEW_Predict\\\\data\\\\pdew_3q_2024.csv')\n",
+    "all_pdew = pd.read_csv('C:\\\\Users\\\\olubl\\\\OneDrive\\\\14th grade\\\\PDEW_Predict\\\\all_pdew_renamed.csv')\n",
     "all_pdew = all_pdew[['city1','city2','nsmiles','passengers','fare','carrier_lg']]\n",
     "all_cities_geo = gpd.read_file('C:\\\\Users\\\\olubl\\\\OneDrive\\\\14th grade\\\\PDEW_Predict\\\\city_coords.geojson')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "483ca7e3-d93c-4daa-9328-1fa0006a8ab5",
    "metadata": {},
    "outputs": [
@@ -62,8 +62,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Allentown/Bethlehem/Easton, PA</td>\n",
-       "      <td>Dallas/Fort Worth, TX</td>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Dallas, TX</td>\n",
        "      <td>1307</td>\n",
        "      <td>18</td>\n",
        "      <td>367.69</td>\n",
@@ -71,7 +71,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Allentown/Bethlehem/Easton, PA</td>\n",
+       "      <td>Allentown, PA</td>\n",
        "      <td>Denver, CO</td>\n",
        "      <td>1539</td>\n",
        "      <td>89</td>\n",
@@ -80,8 +80,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Allentown/Bethlehem/Easton, PA</td>\n",
-       "      <td>Atlanta, GA (Metropolitan Area)</td>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Atlanta, GA</td>\n",
        "      <td>692</td>\n",
        "      <td>107</td>\n",
        "      <td>319.69</td>\n",
@@ -89,7 +89,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Allentown/Bethlehem/Easton, PA</td>\n",
+       "      <td>Allentown, PA</td>\n",
        "      <td>Austin, TX</td>\n",
        "      <td>1441</td>\n",
        "      <td>13</td>\n",
@@ -98,7 +98,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Allentown/Bethlehem/Easton, PA</td>\n",
+       "      <td>Allentown, PA</td>\n",
        "      <td>Nashville, TN</td>\n",
        "      <td>685</td>\n",
        "      <td>46</td>\n",
@@ -110,33 +110,105 @@
        "</div>"
       ],
       "text/plain": [
-       "                            city1                            city2  nsmiles  \\\n",
-       "0  Allentown/Bethlehem/Easton, PA            Dallas/Fort Worth, TX     1307   \n",
-       "1  Allentown/Bethlehem/Easton, PA                       Denver, CO     1539   \n",
-       "2  Allentown/Bethlehem/Easton, PA  Atlanta, GA (Metropolitan Area)      692   \n",
-       "3  Allentown/Bethlehem/Easton, PA                       Austin, TX     1441   \n",
-       "4  Allentown/Bethlehem/Easton, PA                    Nashville, TN      685   \n",
-       "\n",
-       "   passengers    fare carrier_lg  \n",
-       "0          18  367.69         AA  \n",
-       "1          89  138.60         G4  \n",
-       "2         107  319.69         DL  \n",
-       "3          13  256.48         AA  \n",
-       "4          46  130.88         G4  "
+       "           city1          city2  nsmiles  passengers    fare carrier_lg\n",
+       "0  Allentown, PA     Dallas, TX     1307          18  367.69         AA\n",
+       "1  Allentown, PA     Denver, CO     1539          89  138.60         G4\n",
+       "2  Allentown, PA    Atlanta, GA      692         107  319.69         DL\n",
+       "3  Allentown, PA     Austin, TX     1441          13  256.48         AA\n",
+       "4  Allentown, PA  Nashville, TN      685          46  130.88         G4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_pdew.head()"
+    "all_pdew.head() #our pdew counts by city pairs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
+   "id": "49e9a1e9-36bf-4581-9a13-813ca0a30fc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cityname</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>POINT (-75.471 40.602)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dallas, TX</td>\n",
+       "      <td>POINT (-96.797 32.776)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Denver, CO</td>\n",
+       "      <td>POINT (-104.98 39.739)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Atlanta, GA</td>\n",
+       "      <td>POINT (-84.39 33.754)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Austin, TX</td>\n",
+       "      <td>POINT (-97.744 30.271)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        cityname                geometry\n",
+       "0  Allentown, PA  POINT (-75.471 40.602)\n",
+       "1     Dallas, TX  POINT (-96.797 32.776)\n",
+       "2     Denver, CO  POINT (-104.98 39.739)\n",
+       "3    Atlanta, GA   POINT (-84.39 33.754)\n",
+       "4     Austin, TX  POINT (-97.744 30.271)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_cities_geo.head() #the rough geometry of each citymarket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "9faad37e-5f34-4d67-91e0-0dfc1694e1e9",
    "metadata": {},
    "outputs": [
@@ -231,7 +303,7 @@
        "max    2783.000000  16339.000000   705.010000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,18 +315,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "09bc6b7e-d2ad-4d86-b18d-3928d7eaa423",
+   "execution_count": null,
+   "id": "6623a5cd-ad7e-44cd-8e1f-5c4bdc7d5c46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#now we can get additional columns \"city1_geo\" and \"city2_geo\" showing the rough geometry of each citymarket"
+    "#as one of the features of our model will be catchment population for each citymarket, we need to pull this data.\n",
+    "#for the sake of this model, we can use the population around a point within fifty miles from each citymarket.\n",
+    "all_cities_geo['geometry'].buffer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "cf2f4c8c-499a-4453-b103-14edc87f484e",
+   "execution_count": 36,
+   "id": "09bc6b7e-d2ad-4d86-b18d-3928d7eaa423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now we can get additional columns \"city1_pop\" and \"city2_pop\" showing the population around each coordinate\n",
+    "geo_map = all_cities_geo.set_index('cityname')['geometry'].to_dict() #to do the mapping we need to make \"cityname\" be the indexing value.\n",
+    "all_pdew['city1_geo'] = all_pdew['city1'].map(geo_map)\n",
+    "all_pdew['city2_geo'] = all_pdew['city2'].map(geo_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3763f924-b00c-4249-8018-b7bc7d6e16b3",
    "metadata": {},
    "outputs": [
     {
@@ -278,94 +365,99 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>city1</th>\n",
+       "      <th>city2</th>\n",
        "      <th>nsmiles</th>\n",
        "      <th>passengers</th>\n",
        "      <th>fare</th>\n",
+       "      <th>carrier_lg</th>\n",
+       "      <th>city1_geo</th>\n",
+       "      <th>city2_geo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>6611.000000</td>\n",
-       "      <td>6611.000000</td>\n",
-       "      <td>6611.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Dallas, TX</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>18</td>\n",
+       "      <td>367.69</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>POINT (-75.4712794 40.6022059)</td>\n",
+       "      <td>POINT (-96.7968559 32.7762719)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>1091.091514</td>\n",
-       "      <td>203.439873</td>\n",
-       "      <td>282.530593</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Denver, CO</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>89</td>\n",
+       "      <td>138.60</td>\n",
+       "      <td>G4</td>\n",
+       "      <td>POINT (-75.4712794 40.6022059)</td>\n",
+       "      <td>POINT (-104.984862 39.7392364)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>584.066684</td>\n",
-       "      <td>688.511938</td>\n",
-       "      <td>79.852923</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Atlanta, GA</td>\n",
+       "      <td>692</td>\n",
+       "      <td>107</td>\n",
+       "      <td>319.69</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>POINT (-75.4712794 40.6022059)</td>\n",
+       "      <td>POINT (-84.38981510000001 33.7544657)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>56.470000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Austin, TX</td>\n",
+       "      <td>1441</td>\n",
+       "      <td>13</td>\n",
+       "      <td>256.48</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>POINT (-75.4712794 40.6022059)</td>\n",
+       "      <td>POINT (-97.74369950000001 30.2711286)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>637.000000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>239.730000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>964.000000</td>\n",
-       "      <td>36.000000</td>\n",
-       "      <td>281.650000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1471.000000</td>\n",
-       "      <td>112.000000</td>\n",
-       "      <td>327.310000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>2783.000000</td>\n",
-       "      <td>16339.000000</td>\n",
-       "      <td>705.010000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Allentown, PA</td>\n",
+       "      <td>Nashville, TN</td>\n",
+       "      <td>685</td>\n",
+       "      <td>46</td>\n",
+       "      <td>130.88</td>\n",
+       "      <td>G4</td>\n",
+       "      <td>POINT (-75.4712794 40.6022059)</td>\n",
+       "      <td>POINT (-86.77429840000001 36.1622767)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           nsmiles    passengers         fare\n",
-       "count  6611.000000   6611.000000  6611.000000\n",
-       "mean   1091.091514    203.439873   282.530593\n",
-       "std     584.066684    688.511938    79.852923\n",
-       "min      70.000000     10.000000    56.470000\n",
-       "25%     637.000000     18.000000   239.730000\n",
-       "50%     964.000000     36.000000   281.650000\n",
-       "75%    1471.000000    112.000000   327.310000\n",
-       "max    2783.000000  16339.000000   705.010000"
+       "           city1          city2  nsmiles  passengers    fare carrier_lg  \\\n",
+       "0  Allentown, PA     Dallas, TX     1307          18  367.69         AA   \n",
+       "1  Allentown, PA     Denver, CO     1539          89  138.60         G4   \n",
+       "2  Allentown, PA    Atlanta, GA      692         107  319.69         DL   \n",
+       "3  Allentown, PA     Austin, TX     1441          13  256.48         AA   \n",
+       "4  Allentown, PA  Nashville, TN      685          46  130.88         G4   \n",
+       "\n",
+       "                        city1_geo                              city2_geo  \n",
+       "0  POINT (-75.4712794 40.6022059)         POINT (-96.7968559 32.7762719)  \n",
+       "1  POINT (-75.4712794 40.6022059)         POINT (-104.984862 39.7392364)  \n",
+       "2  POINT (-75.4712794 40.6022059)  POINT (-84.38981510000001 33.7544657)  \n",
+       "3  POINT (-75.4712794 40.6022059)  POINT (-97.74369950000001 30.2711286)  \n",
+       "4  POINT (-75.4712794 40.6022059)  POINT (-86.77429840000001 36.1622767)  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#descriptive stats for each numeric column\n",
-    "all_pdew.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebbbfd36-52e1-4f15-b0c5-b10a19bbf6da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#as one of the features of our model will be catchment population for each citymarket, we need to pull this data."
+    "all_pdew.head()"
    ]
   },
   {
@@ -387,6 +479,47 @@
    "source": [
     "#baseline regression - gravity based"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e12c31fa-3e2c-4a2b-93be-0c2d5e820f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cityname\n",
+       "Allentown, PA         POINT (-75.471 40.602)\n",
+       "Dallas, TX            POINT (-96.797 32.776)\n",
+       "Denver, CO            POINT (-104.98 39.739)\n",
+       "Atlanta, GA            POINT (-84.39 33.754)\n",
+       "Austin, TX            POINT (-97.744 30.271)\n",
+       "                               ...          \n",
+       "Toledo, OH            POINT (-83.538 41.653)\n",
+       "Everett, WA           POINT (-122.21 47.979)\n",
+       "Greenville, NC        POINT (-77.372 35.613)\n",
+       "Portsmouth, NH         POINT (-70.76 43.075)\n",
+       "San Bernardino, CA    POINT (-116.08 34.825)\n",
+       "Name: geometry, Length: 274, dtype: geometry"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_cities_geo.set_index('cityname')['geometry']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62a9ec7b-cfeb-4c46-8e7d-1a5474bf35e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
